# realtime-ballistics-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: smoke.sh
src/: main.cpp
src/sim/: ballistics.cpp  ballistics.h  collision.cpp  collision.h  fire_control.cpp  fire_control.h  geometry.cpp  geometry.h  material.h  target.h  vec3.h
